fix(popup): ensure no horizontal scroll

--- a/design/common.blocks/popup/_theme/popup_theme_alfa.styl
+++ b/design/common.blocks/popup/_theme/popup_theme_alfa.styl
@@ -49,6 +49,7 @@
         margin-top: -5px !important;
 
         overflow-y: auto;
+        overflow-x: visible;
 
         max-height: 400px;
     }
